# Find_The_Number

./: CMakeLists.txt  README.md  main.cpp  windows_toolchain.cmake
include/: game.h  menu.h  utils.h
src/: game.cpp  menu.cpp  utils.cpp
